# usd-3dgs-plugins

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  openstrata.ci.yaml  openstrata.scaffold.yaml  openstrata.toml
.github/workflows/: ost-source-ci.yml  release.yml
docs/: README.md
docs/adr/: 0001-model-frame-is-rub.md
docs/architecture/: API_BOUNDARY.md  WORKSPACE.md
docs/contributing/: ADDING_A_FORMAT_DECODER.md  RELEASE_NOTES_TEMPLATE.md
docs/design/: DESIGN_POLICY.md
docs/guides/: BUILDING.md  INSTALL.md
docs/reference/: CAPABILITY_MATRIX.md  EQUIVALENCE.md  GAUSSIAN_MODEL_CONTRACT.md  PERFORMANCE_BASELINES.md  PLY_DIALECTS.md  PLY_MAPPING.md  SOG_FORMAT.md  SOG_MAPPING.md  SPZ_FORMAT.md  SPZ_MAPPING.md  SUPPORTED_CONFIGURATIONS.md
docs/releases/: README.md  v0.1.0.md  v0.2.0.md  v0.3.0-draft.md  v0.3.0.md  v0.4.0.md
docs/reports/: README.md  delivery-history.md
docs/reports/ost/: 01-2026-07-18-v0.18.0-bootstrap.md  README.md  (+2 more)
docs/roadmap/: README.md  backlog.md  current.md  release-plan.md
libs/gaussian-core/: .gitignore  CMakeLists.txt  README.md  openstrata.library.yaml
libs/gaussian-core/cmake/: gaussianCoreConfig.cmake.in
libs/gaussian-core/include/openstrata/gs/: GaussianCloudData.h  GaussianDiagnostics.h  GaussianImportStats.h  GaussianMath.h  GaussianSizeMath.h
libs/gaussian-core/include/openstrata/gs/testing/: CloudContract.h  DecoderTestKit.h
libs/gaussian-core/src/: GaussianImportStats.cpp  GaussianMath.cpp
libs/gaussian-core/tests/: CMakeLists.txt  test_decoder_kit.cpp  test_gaussian_math.cpp
libs/gaussian-usd/: CMakeLists.txt  README.md  openstrata.library.yaml
libs/gaussian-usd/cmake/: gaussianUsdConfig.cmake.in
libs/gaussian-usd/include/openstrata/gs/usd/: GaussianLayerWriter.h
libs/gaussian-usd/src/: GaussianLayerWriter.cpp
libs/gaussian-usd/tests/: CMakeLists.txt  test_gaussian_layer_writer.cpp
plugins/gaussian-ply/: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  openstrata.plugin.yaml  openstrata.scaffold.yaml
plugins/gaussian-ply/plugin/resources/gaussian-ply/: diagnostics.json  plugInfo.json  plugInfo.json.in
plugins/gaussian-ply/src/: GaussianPlyFileFormat.cpp  GaussianPlyFileFormat.h
plugins/gaussian-ply/src/io/: GaussianPlyDecoder.cpp  GaussianPlyDecoder.h  GaussianPlyDiagnostics.h  GaussianPlyImportOptions.cpp  GaussianPlyImportOptions.h  PlyReader.cpp  PlyReader.h
plugins/gaussian-ply/src/usd/: GaussianLayerWriter.cpp  GaussianLayerWriter.h
plugins/gaussian-ply/tests/: CMakeLists.txt  test_gaussian_ply_decoder.cpp  test_gaussian_ply_plugin.py
plugins/gaussian-ply/tests/corpus/: README.md
plugins/gaussian-ply/tests/corpus/leica-sofort/: PROVENANCE.md  leica-sofort-top8192.ply  leica-sofort-top8192.ply.provenance.json
plugins/gaussian-ply/tests/corpus/yashica-t4/: PROVENANCE.md  yashica-t4-top8192.ply  yashica-t4-top8192.ply.provenance.json
plugins/gaussian-ply/tests/fixtures/: degree-1-sh.ply  degree-2-sh.ply  degree-3-sh.ply  degree-4-sh.ply  duplicate-sh-index.ply  empty-vertex.ply  invalid-sh-name.ply  list-property.ply  mesh-not-gaussian.ply  missing-opacity.ply  nan-opacity-binary-le.ply  non-contiguous-sh.ply  one-gaussian-ascii.ply  one-gaussian-ascii.ply.golden.usda  one-gaussian-binary-le.ply  out-of-range-double.ply  overflow-scale.ply  reordered-properties.ply  sh-count-not-rgb.ply  sh-invalid-degree.ply  three-gaussian-binary-le.ply  truncated-binary-le.ply
plugins/gaussian-ply/tools/: benchmark_import.py  generate_fixtures.py
plugins/gaussian-sog/: .gitignore  CMakeLists.txt  README.md  openstrata.plugin.yaml  openstrata.scaffold.yaml
plugins/gaussian-sog/plugin/resources/gaussian-sog/: diagnostics.json  plugInfo.json  plugInfo.json.in
plugins/gaussian-sog/src/: GaussianSogFileFormat.cpp  GaussianSogFileFormat.h
plugins/gaussian-sog/src/io/: GaussianSogDiagnostics.h
plugins/gaussian-sog/tests/: CMakeLists.txt  test_gaussian_sog_plugin.py
plugins/gaussian-sog/tests/fixtures/: not-implemented.sog
plugins/gaussian-spz/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  openstrata.plugin.yaml  openstrata.scaffold.yaml
plugins/gaussian-spz/plugin/resources/gaussian-spz/: diagnostics.json  plugInfo.json  plugInfo.json.in
plugins/gaussian-spz/src/: GaussianSpzFileFormat.cpp  GaussianSpzFileFormat.h
plugins/gaussian-spz/src/io/: GaussianSpzDecoder.cpp  GaussianSpzDecoder.h  GaussianSpzDiagnostics.h  SpzReader.cpp  SpzReader.h
plugins/gaussian-spz/tests/: CMakeLists.txt  test_gaussian_spz_decoder.cpp  test_gaussian_spz_plugin.py  test_gaussian_spz_reader.cpp
plugins/gaussian-spz/tests/corpus/: README.md
plugins/gaussian-spz/tests/corpus/leica-sofort/: PROVENANCE.md  leica-sofort-top8192.spz  leica-sofort-top8192.spz.provenance.json
plugins/gaussian-spz/tests/corpus/yashica-t4/: PROVENANCE.md  yashica-t4-top8192.spz  yashica-t4-top8192.spz.provenance.json
plugins/gaussian-spz/tests/fixtures/: bad-crc-v2.spz  bad-fhcrc-v2.spz  bad-isize-v2.spz  corrupt-deflate.spz  count-exceeds-stream-v2.spz  decode-degree1-v2.spz  decode-degree1-v2.spz.golden.usda  decode-degree3-v2.spz  decode-nonfinite-v1.spz  decode-v1.spz  decode-v3.spz  degree3-v2.spz  degree4-v2.spz  empty-points-v2.spz  extensions-v2.spz  gzip-not-spz.spz  header-fields-v2.spz  huge-count-v2.spz  long-fname-v2.spz  minimal-v1.spz  minimal-v2.spz  minimal-v3.spz  not-spz.spz  plaintext-v2.spz  plaintext-v4.spz  sh-degree-5-v2.spz  short-stream.spz  three-points-degree1-v2.spz  trailing-after-member-v2.spz  trailing-decompressed-v2.spz  truncated-deflate-v2.spz  truncated-payload-v2.spz  version-0.spz  version-5.spz
plugins/gaussian-spz/tools/: generate_fixtures.py
scripts/: benchmark_import.py  ply_subset.py  release.py  spz_subset.py
tests/equivalence/: CMakeLists.txt  test_equivalence.cpp
tests/equivalence/fixtures/: equiv-degree1-offgrid-binary-le.ply  equiv-degree1-offgrid-v2.spz  equiv-degree3-exact-binary-le.ply  equiv-degree3-exact-v2.spz  equiv-degree3-exact-v3.spz
tools/: generate_equivalence_fixtures.py
